fix(idna translator): Reviewed coverage configs and report

--- a/reports/logging/testdox.html
+++ b/reports/logging/testdox.html
@@ -53,13 +53,13 @@
     <body>
         <h2>IDNATranslator (CNIC\IDNA\Tests\IDNATranslator)</h2>
         <ul>
-            <li class="success">Convert</li>
-            <li class="success">Convert bulk</li>
-            <li class="success">Idn to punycode conversion</li>
-            <li class="success">To a s c i i</li>
-            <li class="success">To a s c i i with transitional</li>
-            <li class="success">To a s c i i without transitional</li>
-            <li class="success">To unicode</li>
+            <li class="defect">Convert</li>
+            <li class="defect">Convert bulk</li>
+            <li class="defect">Idn to punycode conversion</li>
+            <li class="defect">To a s c i i</li>
+            <li class="defect">To a s c i i with transitional</li>
+            <li class="defect">To a s c i i without transitional</li>
+            <li class="defect">To unicode</li>
         </ul>
     </body>
 </html>
